RESOLVED FIXED240645
REGRESSION(r294215): : r294317 was reverted, it fixed an edge-case for 294215
https://bugs.webkit.org/show_bug.cgi?id=240645
Summary REGRESSION(r294215): : r294317 was reverted, it fixed an edge-case for 294215
WebKit Commit Bot
Reported 2022-05-19 06:12:14 PDT
https://commits.webkit.org/r294215 introduced a regression: : r294317 was reverted, it fixed an edge-case for 294215 This is an automatic bug report generated by webkitbot. If this bug report was created because of a flaky test, please file a bug for the flaky test (if we don't already have one on file) and dup this bug against that bug so that we can track how often these flaky tests fail.
Attachments
REVERT of r294215 (10.30 KB, patch)
2022-05-19 06:12 PDT, WebKit Commit Bot
no flags
Patch (11.25 KB, patch)
2022-05-24 04:25 PDT, Kimmo Kinnunen
no flags
[fast-cq] For landing (11.22 KB, patch)
2022-05-25 12:00 PDT, Kimmo Kinnunen
no flags
WebKit Commit Bot
Comment 1 2022-05-19 06:12:21 PDT
Created attachment 459584 [details] REVERT of r294215 Any committer can land this patch automatically by marking it commit-queue+. The commit-queue will build and test the patch before landing to ensure that the revert will be successful. This process takes approximately 15 minutes. If you would like to land the revert faster, you can use the following command: webkit-patch land-attachment ATTACHMENT_ID where ATTACHMENT_ID is the ID of this attachment.
Kimmo Kinnunen
Comment 2 2022-05-24 04:25:44 PDT
EWS
Comment 3 2022-05-25 02:31:04 PDT
Commit message contains (OOPS!), blocking PR #None
Kimmo Kinnunen
Comment 4 2022-05-25 12:00:23 PDT
Created attachment 459764 [details] [fast-cq] For landing
Radar WebKit Bug Importer
Comment 5 2022-05-25 12:02:00 PDT
EWS
Comment 6 2022-05-25 12:05:56 PDT
Committed r294816 (250969@main): <https://commits.webkit.org/250969@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 459764 [details].
Note You need to log in before you can comment on or make changes to this bug.