REGRESSION(r294215): : r294317 was reverted, it fixed an edge-case for 294217 https://bugs.webkit.org/show_bug.cgi?id=240645

Patch by Kimmo Kinnunen <kkinnunen@apple.com> on 2022-05-25
Unreviewed.

Revert r294215, its dependency r294317 was reverted.

Reverted changeset:
        "WebCore::IOSurface has WebCore::GraphicsContext as its
        property, it should be the other way around"
        https://bugs.webkit.org/show_bug.cgi?id=240417
        https://commits.webkit.org/r294215

* Source/WebCore/platform/graphics/cg/GraphicsContextCG.cpp:
(WebCore::GraphicsContextCG::drawNativeImage):
* Source/WebCore/platform/graphics/cg/GraphicsContextCG.h:
* Source/WebCore/platform/graphics/cg/IOSurfacePool.cpp:
(WebCore::IOSurfacePool::willAddSurface):
* Source/WebCore/platform/graphics/cg/ImageBufferIOSurfaceBackend.cpp:
(WebCore::ImageBufferIOSurfaceBackend::~ImageBufferIOSurfaceBackend):
(WebCore::ImageBufferIOSurfaceBackend::context const):
(WebCore::ImageBufferIOSurfaceBackend::releaseGraphicsContext):
* Source/WebCore/platform/graphics/cg/ImageBufferIOSurfaceBackend.h:
* Source/WebCore/platform/graphics/cocoa/GraphicsContextCocoa.mm:
(WebCore::GraphicsContextCG::GraphicsContextCG): Deleted.
* Source/WebCore/platform/graphics/cocoa/IOSurface.h:
* Source/WebCore/platform/graphics/cocoa/IOSurface.mm:
(WebCore::IOSurface::create):
(WebCore::IOSurface::ensureGraphicsContext):
(WebCore::IOSurface::releaseGraphicsContext):
(WebCore::IOSurface::releasePlatformGraphicsContext): Deleted.

Canonical link: https://commits.webkit.org/250969@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@294816 268f45cc-cd09-0410-ab3c-d52691b4dbfc